assets/css/styles.css
:root {
    --color-orange: #eb9515;
    --color-purple: #5c2b7c;
    --color-green: #98bba7;
    --color-cream: #f5efe6;
    --color-white: #fff;
    --color-black: #000;
    --color-dark: #312f2f;
    --bg: var(--color-purple);
    --text: var(--color-cream);
    --link-hover: var(--color-green);
    --link-active: var(--color-green);
    --h1: var(--color-green);
    --h2: var(--color-green);
    --accent1: var(--color-white);
    --accent2: var(--color-dark);
    --accent3: var(--color-orange);

}

/* =========================
   Themes (override values)
   ========================= */


body[data-theme="theme-1"] {
    --bg: var(--color-purple);
    --text: var(--color-cream);
    --h1: var(--color-green);
    --h2: var(--color-green);
    --link-hover: var(--color-green);
    --link-active: var(--color-green);
    --accent1: var(--color-white);
    --accent2: var(--color-dark);
    --accent3: var(--color-orange);
}

body[data-theme="theme-2"] {
    --bg: var(--color-cream);
    --text: var(--color-black);
    --h1: var(--color-green);
    --h2: var(--color-black);
    --link-hover: var(--color-dark);
    --link-active: var(--color-green);
    --accent1: var(--color-white);
    --accent2: var(--color-dark);
    --accent3: var(--color-dark);
}

body[data-theme="theme-3"] {
    --bg: var(--color-dark);
    --text: var(--color-cream);
    --h1: var(--color-green);
    --h2: var(--color-cream);
    --link-hover: var(--color-orange);
    --link-active: var(--color-orange);
    --accent1: var(--color-white);
    --accent2: var(--color-dark);
    --accent3: var(--color-green);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html,
body {
    height: 100%;
}

body {
    overflow: hidden;
    font-family: 'Fira Code', monospace;
    color: var(--text);
    background-color: var(--bg);
    transition: background-color .6s ease, color .6s ease;
}

h1 {
    font-family: 'Gasoek One', sans-serif;
    color: var(--h1);
}

h2 {
    font-family: 'Quicksand', sans-serif;
    color: var(--h2);
}

h3 {
    font-family: 'Quicksand', sans-serif;
}

p {
    font-family: 'Fira Code', monospace;
    font-size: 0.9rem;
}

a.active {
    color: var(--link-active);
    text-decoration: none;
}

a:hover {
    color: var(--link-hover);
}

/* ===== Scene ===== */
.scene {
    position: absolute;
    inset: 0;
    z-index: 10;
    height: 100vh;
    /* pointer-events: none; */
}

.scene.hidden {
    display: none;
}

.img-bottom {
    position: fixed;
    width: 220px;
    height: 220px;
    left: 0;
    bottom: 0;
    object-fit: cover;
    z-index: 1;
}

@media (max-width: 520px) {
    .img-bottom {
        width: 180px;
        height: 180px;
        left: -px;
        bottom: 0;
    }
}

.img-top {
    position: fixed;
    width: 220px;
    height: 220px;
    left: 6rem;
    bottom: 6rem;
    object-fit: cover;
    z-index: 2;
    will-change: transform;
}

@media (max-width: 520px) {
    .img-top {
        width: 180px;
        height: 180px;
        left: 3rem;
        bottom: 6rem;
    }
}

.scene-copy {
    position: absolute;
    inset: 0;
    display: block;
    /* pointer-events: none; */
}

/* .scene-copy p {
    font-family: 'Fira Code', monospace;
    font-size: 1.1rem;
} */

.scene-copy a {
    text-decoration: none;
    color: inherit;
}

.subtitle {
    position: fixed;
    right: 10px;
    top: 60%;
    translate: -50% -50%;
    text-align: right;
    font-size: 1.1rem;
    /* font: 600 clamp(1rem, 4vw, 1.75rem)/1.2 system-ui; */
    /* color: #f5efe6; */
    text-shadow: 0 2px 10px rgba(0, 0, 0, .5);
    opacity: 1;
    will-change: opacity;
}

@media (max-width: 520px) {
    .subtitle {
        right: 0px;
        top: 50%;
        translate: -20% -50%;
    }
}

.details {
    position: absolute;
    /* left: 10px;
    bottom: 10px; */
    left: clamp(1rem, 4vw, 3rem);
    bottom: clamp(1rem, 10vw, 3rem);
    color: var(--accent3);
    /* text-shadow: 0 2px 10px rgba(0, 0, 0, .5); */
    opacity: 0;
    will-change: opacity;
    text-decoration: none;
}

.quote {
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 90%;
    text-align: center;
    text-shadow: 0 2px 10px rgba(0, 0, 0, .35);
    opacity: 0;
    will-change: opacity;
    /* max-width: min(40ch, 45vw); */
    /* font: 500 clamp(.9rem, 2.8vw, 1.1rem)/1.35 system-ui; */
    /* color: #f5efe6; */
}

@media (max-width: 520px) {
    .quote {
        left: 50%;
        top: 50%;
        /* translate: -20% -50%; */
    }
}

.quote2 {
    position: absolute;
    right: clamp(1rem, 4vw, 3rem);
    bottom: clamp(1rem, 4vw, 3rem);
    max-width: min(40ch, 45vw);
    text-align: right;
    /* font: 500 clamp(.9rem, 2.8vw, 1.1rem)/1.35 system-ui; */
    /* color: #f5efe6; */
    /* text-shadow: 0 2px 10px rgba(0, 0, 0, .35); */
    opacity: 1;
    will-change: opacity;
    color: var(--text);
}

main {
    position: relative;
    z-index: 0;
    /* background: var(--color-purple);
    color: var(--color-black); */
}

section {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.hero {
    /* background: #5c2b7c; */
    justify-content: flex-start;
    padding-top: clamp(3rem, 12vh, 14rem);
}


.title-box {
    width: 100vw;
    margin: 0 auto;
    container-type: inline-size;
}

.title {
    margin: 0;
    text-align: center;
    line-height: 0.9;
    font-weight: 400;
    font-size: 22cqw;
    text-wrap: balance;
}

@supports not (font-size: 1cqw) {
    .title {
        font-size: clamp(32px, 12vw, 180px);
    }
}

/* =========================
   Navigation (header & menu)
   ========================= */
.site-header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 50;
    background: transparent;
    pointer-events: auto;
}
/* ... */

